// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`log can log error messages 1`] = `
Array [
  Array [
    "[31m[1merror message[22m[39m",
  ],
]
`;

exports[`log can log warning messages 1`] = `
Array [
  Array [
    "[33m[1mwarn message[22m[39m",
  ],
]
`;

exports[`log can write other types of messages 1`] = `
Array [
  Array [
    "[32msuccess message[39m",
  ],
]
`;

exports[`log exits with the given code if one is provided 1`] = `
Array [
  Array [
    1,
  ],
]
`;
